--- a/src/components/Modal/styles.module.css
+++ b/src/components/Modal/styles.module.css
@@ -7,14 +7,14 @@
 
 /* Modal Box */
 .modal {
-    @apply bg-white shadow-lg p-4 rounded-md max-w-[80vw] max-h-[90vh] overflow-y-auto;
+    @apply bg-white shadow-lg p-4 rounded-md max-w-[100vw] max-h-[100vh] overflow-y-auto;
     animation: popUp 0.35s ease-out;
     direction: rtl;
 }
 
 /* Close Button Styling */
 .closeButton {
-    @apply p-2 bg-transparent border-none font-bold text-2xl;
+    @apply p-2 bg-transparent border-none font-bold text-2xl text-black;
     box-shadow: none;
 }
 
