--- a/src/components/TextField/styles.module.css
+++ b/src/components/TextField/styles.module.css
@@ -3,7 +3,7 @@
 }
 
 .field {
-    @apply relative overflow-hidden border border-solid border-[0.5px] rounded bg-white-light;
+    @apply flex justify-center items-center relative overflow-hidden border-solid border-[0.5px] rounded bg-white-light py-1 pr-1 pl-7;
 }
 
 .field:hover {
@@ -11,8 +11,8 @@
 }
 
 .input {
-    @apply w-full p-0 pl-8 pr-2 lg:py-1 text-3xs lg:text-sm text-black 
-        placeholder:text-2xs lg:placeholder:text-xs bg-white-light border-none;
+    @apply w-full font-400 text-3xs md:text-2xs lg:text-xs text-black 
+        placeholder:text-3xs md:placeholder:text-2xs lg:placeholder:text-xs bg-transparent border-none;
 }
 
 .input:focus,
