--- a/src/components/DateInput/styles.module.css
+++ b/src/components/DateInput/styles.module.css
@@ -1,13 +1,13 @@
 .container {
-    @apply flex flex-col gap-2 relative;
+    @apply flex flex-col gap-1 relative;
 }
 
 .field {
-    @apply bg-white-light border border-gray-300 rounded-md relative transition-all duration-200;
+    @apply bg-white-light border-[0.5px] border-black rounded relative transition-all duration-200;
 }
 
 .field:hover {
-    @apply border-green shadow-sm;
+    @apply border-green shadow-sm bg-white;
 }
 
 .field:focus-within {
@@ -15,19 +15,20 @@
 }
 
 .dateInputContainer {
-    @apply w-full relative;
+    @apply w-full relative !flex justify-center items-center py-1 pr-1;
 }
 
 .dateInput {
-    @apply w-full py-2 px-3 rounded-md bg-transparent text-sm leading-5 text-gray-700 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-green focus:bg-white;
+    @apply w-full font-400 text-3xs md:text-2xs lg:text-xs text-black 
+        placeholder:text-3xs md:placeholder:text-2xs lg:placeholder:text-xs bg-transparent border-none outline-none;
 }
 
 .dateInput:hover {
-    @apply bg-white border-gray-300;
+    @apply bg-white border-black;
 }
 
 .icon {
-    @apply absolute h-4 w-4 lg:h-6 lg:w-6 left-3 top-1/2 -translate-y-1/2 text-gray-500 transition-all duration-200 cursor-pointer;
+    @apply absolute left-1 lg:left-1.5 top-1/2 -translate-y-1/2 transition-all duration-200 cursor-pointer;
 }
 
 .field:hover & {
