--- a/src/components/FieldSet/styles.module.css
+++ b/src/components/FieldSet/styles.module.css
@@ -1,5 +1,5 @@
 .fieldset {
-    @apply w-full overflow-hidden px-4 py-4 rounded-lg lg:px-8 lg:pt-6;
+    @apply w-full px-4 py-4 rounded-lg lg:px-8 lg:pt-6;
     border: 0.5px solid transparent;
     background: linear-gradient(white, white) padding-box,
         linear-gradient(180deg, #727272, white) border-box;
