--- a/src/components/Select/styles.module.css
+++ b/src/components/Select/styles.module.css
@@ -3,7 +3,7 @@
 }
 
 .field {
-    @apply h-6 lg:h-[26px] text-2xs lg:text-xs rounded border-[0.5px] border-solid border-black hover:border-green  bg-gray-f7 font-400  py-0  !ring-0 hover:bg-white cursor-pointer;
+    @apply h-6 lg:h-[26px] text-2xs lg:text-xs rounded border-[0.5px] border-solid border-black hover:border-green  bg-gray-f7 font-400  py-0  !ring-0 hover:bg-white cursor-pointer outline-none;
 }
 
 .options {
