--- a/src/pages/SpecialistFormPage/layouts/Header/styles.module.css
+++ b/src/pages/SpecialistFormPage/layouts/Header/styles.module.css
@@ -1,50 +1,59 @@
 /* Container Styles */
 .container {
-    @apply bg-white shadow-md rounded-md px-3 md:px-4 pt-1 pb-4;
+  @apply rounded-md bg-white px-3 pb-4 pt-1 shadow-md md:px-4;
 }
 
 .normalContainer {
-    background: linear-gradient(0deg, #eefeff 0%, #b2e5f8 100%);
+  background: linear-gradient(0deg, #eefeff 0%, #b2e5f8 100%);
 }
 
 .vipContainer {
-    background: linear-gradient(
-        346deg,
-        #ffa800 3.07%,
-        #ffcd1a 6.85%,
-        #ffb800 12.51%,
-        #eb9b00 20.64%,
-        #f3a200 29.5%,
-        #fff78e 50.27%,
-        #ffe2a9 74.82%,
-        #ffa800 97.47%
-    );
+  background: linear-gradient(
+    346deg,
+    #ffa800 3.07%,
+    #ffcd1a 6.85%,
+    #ffb800 12.51%,
+    #eb9b00 20.64%,
+    #f3a200 29.5%,
+    #fff78e 50.27%,
+    #ffe2a9 74.82%,
+    #ffa800 97.47%
+  );
 }
 
 /* Fieldset Styling with Gradient Border */
 .fieldset {
-    @apply px-2 md:px-4 !pt-3 !pb-5;
-    background: linear-gradient(white, white) padding-box,
-        linear-gradient(180deg, #222222, #222222) border-box;
+  @apply px-2 md:px-4 !pt-3 !pb-2 md:!pb-5 relative;
+  background: linear-gradient(white, white) padding-box,
+    linear-gradient(180deg, #222222, #222222) border-box;
 }
 
 .fieldset legend {
-    background-color: transparent;
-    margin-right: 0px;
+  background-color: transparent;
+  margin-right: 0px;
 }
 
 .form {
-    @apply flex w-full items-end bg-background;
+  @apply flex w-full items-end bg-background;
 }
 
 .searchButton {
-    @apply border-green w-[115px] ml-auto md:ml-0 mt-2 md:mt-0 mr-auto md:mr-0 bg-gray-f7 lg:mr-4;
+  @apply flex border-green w-[96px] lg:w-[115px] ml-auto md:ml-0 mt-2 md:mt-0 mr-auto md:mr-0 bg-gray-f7 !rounded-[2px];
 }
 
 .textField {
-    @apply border-[0.5px] w-full bg-gray-f7;
+  @apply !border-[0.25px] !rounded-[2px] lg:!rounded w-full bg-gray-f7;
+}
+
+.textField input {
+  @apply md:text-3xs md:placeholder:text-3xs lg:placeholder:text-xs lg:text-xs;
 }
 
 .radio {
-    @apply !bg-transparent !border-none !gap-1 !py-0 !px-0;
+  @apply !bg-transparent !border-none !gap-[1px] lg:!gap-1 !py-0 !px-0;
+}
+
+.radio span {
+  @apply text-3xs !font-600 lg:text-xs;
+  margin-left: 1px !important;
 }
