--- a/src/pages/SpecialistFormPage/layouts/Header/styles.module.css
+++ b/src/pages/SpecialistFormPage/layouts/Header/styles.module.css
@@ -57,3 +57,17 @@
   @apply text-3xs !font-600 lg:text-xs;
   margin-left: 1px !important;
 }
+
+@media only screen and (min-width: 1025px) {
+  .modal {
+    width: clamp(1024px, 96vw, 1280px);
+  }
+}
+
+.table td {
+  @apply !p-0;
+}
+
+.table th {
+  @apply !bg-[#f1f1f1];
+}
