--- a/src/pages/SpecialistFormPage/layouts/Header/styles.module.css
+++ b/src/pages/SpecialistFormPage/layouts/Header/styles.module.css
@@ -58,14 +58,23 @@
   margin-left: 1px !important;
 }
 
+.filterRadio {
+  @apply !bg-transparent !border-none !gap-[1px] lg:!gap-1 !py-0 !px-0;
+}
+
+.filterRadio span {
+  @apply text-2xs !font-600 lg:text-xs;
+  margin-left: 1px !important;
+}
+
 @media only screen and (min-width: 1025px) {
   .modal {
     width: clamp(1024px, 96vw, 1280px);
   }
 }
 
-.table td {
-  @apply !p-0;
+.table tr:hover td {
+  @apply border-green;
 }
 
 .table th {
