--- a/src/components/FileField/styles.module.css
+++ b/src/components/FileField/styles.module.css
@@ -1,34 +1,42 @@
 .uploadContainer {
-    @apply flex flex-col border-[0.5px] px-2 py-2 bg-white-lighter border-[#efe7e9] rounded shadow-box relative;
+  @apply flex flex-col border-[0.5px] px-2 py-2 bg-white-lighter border-[#efe7e9] rounded shadow-box relative;
 }
 .uploadTitle {
-    @apply flex items-center justify-center gap-1 text-sm font-700;
+  @apply flex items-center justify-center gap-1 text-sm font-700;
 }
 .uploadPart {
-    @apply flex w-full items-center justify-between gap-4;
+  @apply flex w-full items-center justify-between gap-4;
 }
 .uploadShow {
-    @apply border w-full cursor-pointer flex items-center justify-between px-2 border-black rounded;
+  @apply border w-full cursor-pointer flex items-center justify-between px-2 border-black rounded;
 }
 
 .button {
-    @apply h-[22px] lg:h-[26px] w-[81px] text-nowrap border-[#858585] !bg-transparent px-2;
+  @apply h-[22px] lg:h-[26px] w-[81px] text-nowrap border-[#858585] !bg-transparent px-2;
+}
+
+.inputField {
+  @apply relative w-full justify-between flex items-center cursor-pointer overflow-hidden text-ellipsis;
+}
+
+.input {
+  @apply z-10 w-full h-full absolute left-0 top-0 opacity-0;
 }
 
 .label {
-    @apply w-full text-center justify-center;
+  @apply w-full text-center justify-center;
 }
 
 .confirmBox {
-    @apply z-20 bg-white bg-opacity-40 backdrop-blur-md absolute left-0 top-0 w-full flex flex-col justify-between min-h-full px-2 py-2;
-    animation: popUp 0.35s 1;
+  @apply z-20 bg-white bg-opacity-40 backdrop-blur-md absolute left-0 top-0 w-full flex flex-col justify-between min-h-full px-2 py-2;
+  animation: popUp 0.35s 1;
 }
 
 @keyframes popUp {
-    0% {
-        transform: scale(0);
-    }
-    100% {
-        transform: scale(1);
-    }
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
