--- a/src/components/Page/styles.module.css
+++ b/src/components/Page/styles.module.css
@@ -2,7 +2,7 @@
 
 /* Page container */
 .page {
-  @apply relative flex h-screen overflow-hidden w-full flex-col bg-white-light pt-4 pb-4 lg:px-4;
+  @apply relative flex h-screen overflow-hidden w-full flex-col bg-white-light pb-4 lg:px-4;
   background: url(../../assets/images/net.svg) no-repeat bottom;
   background-size: contain;
 }
@@ -15,6 +15,6 @@
 /* Router grid */
 .router {
   @apply grid grid-cols-2 gap-3 md:gap-y-8 md:gap-x-6 md:grid-cols-4 
-        lg:gap-x-12 lg:grid-cols-6 xl:grid-cols-6 w-full px-4 pt-4 
-        lg:pt-8 max-h-full overflow-y-auto mx-auto min-h-full;
+        lg:gap-x-12 lg:grid-cols-6 xl:grid-cols-6 w-full px-4 pt-4 pb-4 
+        lg:pt-8 max-h-full overflow-y-auto mx-auto;
 }
