--- a/src/components/Select/styles.module.css
+++ b/src/components/Select/styles.module.css
@@ -3,13 +3,13 @@
 }
 
 .field {
-    @apply h-6 lg:h-[26px] text-2xs lg:text-xs rounded border-[0.5px] border-solid border-black hover:border-green  bg-gray-f7 font-400  py-0  !ring-0 hover:bg-white cursor-pointer outline-none;
+    @apply h-6 lg:h-[26px] text-2xs lg:text-xs rounded border-[0.5px] border-solid border-black hover:border-success  bg-[#f7f7f7] font-400  py-0  !ring-0 hover:bg-white cursor-pointer outline-none;
 }
 
 .options {
-    @apply text-2xs lg:text-xs p-2 bg-white-light rounded border-[0.5px] border-solid border-black;
+    @apply text-2xs lg:text-xs p-2 bg-formItemInput rounded border-[0.5px] border-solid border-black;
 }
 
 .fieldError {
-    @apply border-red;
+    @apply border-error;
 }
