--- a/src/layouts/ArchiveTable/styles.module.css
+++ b/src/layouts/ArchiveTable/styles.module.css
@@ -7,7 +7,7 @@
 }
 
 .loadingSpinner {
-    @apply text-2xl text-green animate-spin;
+    @apply text-2xl text-success animate-spin;
 }
 
 .emptyStateContainer {
