--- a/src/components/CheckBoxGroup/styles.module.css
+++ b/src/components/CheckBoxGroup/styles.module.css
@@ -1,19 +1,11 @@
 .container {
-    @apply flex flex-wrap items-center justify-between gap-y-2 relative;
-}
-
-.label {
-    @apply ml-6 md:w-[20%];
+    @apply w-full flex flex-col p-2 bg-formItem rounded shadow-formItem relative;
 }
 
 .options {
-    @apply flex flex-1 gap-2;
+    @apply flex w-full flex-wrap gap-1.5;
 }
 
 .options label {
     @apply min-w-fit flex-1;
-}
-
-.checkBox {
-    @apply mr-2 min-w-fit flex-1;
 }
