--- a/src/components/Radio/styles.module.css
+++ b/src/components/Radio/styles.module.css
@@ -2,6 +2,13 @@
     @apply relative inline-flex justify-between items-center gap-3 lg:gap-6 bg-formItem lg:rounded px-[6px] py-0.5 lg:py-1 border-[0.5px] border-solid border-black cursor-pointer opacity-60 hover:bg-transparent hover:opacity-100;
 }
 
+.enContainer .label {
+    @apply ml-0 mr-2;
+    line-height: 0px !important;
+    font-family: sans-serif !important;
+    font-weight: 600;
+}
+
 .checkedContainer {
     @apply border-success bg-white opacity-100  border-[0.5px];
 }
