--- a/src/components/RadioOptions/styles.module.css
+++ b/src/components/RadioOptions/styles.module.css
@@ -1,5 +1,5 @@
 .container {
-    @apply flex flex-wrap items-center justify-between gap-y-2 relative;
+    @apply bg-formItem w-full flex flex-col relative p-2 rounded shadow-formItem;
 }
 
 .containerError {
@@ -12,14 +12,6 @@
     @apply min-w-fit flex-1;
 }
 
-.label {
-    @apply ml-6 md:w-[20%];
-}
-
 .options {
-    @apply flex flex-1 gap-2;
-}
-
-.radio {
-    @apply min-w-fit flex-1;
+    @apply flex flex-wrap w-full gap-1.5;
 }
