--- a/src/components/CheckBoxGroup/styles.module.css
+++ b/src/components/CheckBoxGroup/styles.module.css
@@ -1,5 +1,6 @@
 .container {
-    @apply w-full flex flex-col p-2 bg-formItem rounded shadow-formItem relative;
+    @apply w-full flex flex-col p-2 bg-formItem rounded relative;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
 }
 
 .options {
