--- a/src/components/CheckBox/styles.module.css
+++ b/src/components/CheckBox/styles.module.css
@@ -1,5 +1,5 @@
 .container {
-    @apply relative inline-flex justify-between items-center gap-3 lg:gap-6 rounded-[2px] bg-background lg:rounded px-[6px] py-0.5 lg:py-1 border-[0.5px] border-solid border-black cursor-pointer opacity-60 hover:bg-transparent hover:opacity-100 overflow-hidden;
+    @apply relative inline-flex justify-between items-center gap-3 lg:gap-6 rounded-[2px] bg-background lg:rounded px-1 lg:px-[6px] py-0.5 lg:py-1 border-[0.5px] border-solid border-black cursor-pointer opacity-60 hover:bg-transparent hover:opacity-100 overflow-hidden;
 }
 
 .enContainer .label {
@@ -34,7 +34,7 @@
 
 .firstLayer {
     @apply w-[10px] h-[10px] lg:w-[12px] lg:h-[12px] flex items-center justify-center rounded-[2px];
-    background-color: #ddddddaa;
+    background-color: #f1f1f1ff;
     border: 0.25px solid rgb(134, 134, 134);
 }
 
@@ -44,13 +44,13 @@
 }
 
 .secondLayer {
-    @apply flex items-center justify-center w-[12px] h-[12px] lg:w-[16px] lg:h-[16px] bg-white rounded-[2px];
+    @apply flex items-center justify-center w-[12px] h-[14px] lg:w-[14px] lg:h-[18px] bg-white rounded-[2px];
     border: 0.25px solid rgb(171, 171, 171);
 }
 
 .dot {
     @apply h-1 w-1 lg:w-1.5 lg:h-1.5 rounded-[2px];
-    background-color: #cbfef288;
+    background-color: #cbfef2;
 }
 
 .dotChecked {
