--- a/src/components/Label/styles.module.css
+++ b/src/components/Label/styles.module.css
@@ -7,6 +7,7 @@
 
 .required {
     @apply text-error;
+    line-height: 0px !important;
 }
 
 .label .required {
@@ -21,6 +22,7 @@
 
 .enLabel .required {
     @apply ml-1 md:text-sm lg:text-lg;
+    line-height: 0px !important;
 }
 
 .enLabel img {
