--- a/src/components/TextField/styles.module.css
+++ b/src/components/TextField/styles.module.css
@@ -1,34 +1,34 @@
 .container {
-    @apply bg-formItem w-full flex flex-col relative p-2 rounded;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+  @apply bg-formItem w-full flex flex-col relative p-2 rounded;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
 }
 
 .field {
-    @apply flex justify-center items-center relative overflow-hidden border-solid border-[0.5px] rounded bg-formItemInput;
+  @apply flex justify-center items-center relative overflow-hidden border-solid border-[0.5px] rounded bg-formItemInput;
 }
 
 .field:hover {
-    @apply bg-white text-black;
+  @apply bg-white text-black;
 }
 
 .input {
-    @apply w-full font-400 text-3xs md:text-2xs lg:text-xs text-black 
-        placeholder:text-3xs md:placeholder:text-2xs lg:placeholder:text-xs bg-transparent border-none py-0.5 lg:py-1 px-1.5;
+  @apply w-full font-400 text-3xs md:text-2xs lg:text-xs text-black 
+        placeholder:text-3xs md:placeholder:text-2xs lg:placeholder:text-xs bg-transparent border-none py-1 px-1.5;
 }
 
 .input:focus,
 .input:hover {
-    @apply outline-none bg-white border-black text-black ring-0;
+  @apply outline-none bg-white border-black text-black ring-0;
 }
 
 textarea {
-    @apply p-2;
+  @apply p-2;
 }
 
 .icon {
-    @apply absolute top-1/2 left-1 lg:left-1.5 -translate-y-1/2;
+  @apply absolute top-1/2 left-1 lg:left-1.5 -translate-y-1/2;
 }
 
 .icon img {
-    @apply h-[13px] w-[13px] lg:h-[19px] lg:w-[19px];
+  @apply h-[13px] w-[13px] lg:h-[19px] lg:w-[19px];
 }
