--- a/src/pages/SpecialistDashboardPage/layouts/Header/styles.module.css
+++ b/src/pages/SpecialistDashboardPage/layouts/Header/styles.module.css
@@ -1,12 +1,12 @@
 /* Container Styles */
 .container {
-  @apply bg-white shadow-md rounded-md px-3 md:px-4 pt-1 pb-4 !overflow-auto;
+  @apply bg-white shadow-md rounded-md px-3 md:px-4 pt-1 pb-4;
   background: linear-gradient(0deg, #eefeff 0%, #b2e5f8 100%);
 }
 
 /* Fieldset Styling with Gradient Border */
 .fieldset {
-  @apply px-2 md:px-4 !pt-3 !pb-5 !overflow-visible;
+  @apply px-2 md:px-4 !pt-3 !pb-5 !overflow-visible relative;
   background: linear-gradient(white, white) padding-box,
     linear-gradient(180deg, #222222, #222222) border-box;
 }
