--- a/src/components/FieldSet/styles.module.css
+++ b/src/components/FieldSet/styles.module.css
@@ -6,7 +6,7 @@
 }
 
 .container {
-  @apply absolute left-0 w-full px-4 py-4 lg:px-8 lg:pt-6;
+  @apply relative w-full px-4 py-4 lg:px-8 lg:pt-6;
 }
 
 .borderImage {
