--- a/src/components/DateInput/styles.module.css
+++ b/src/components/DateInput/styles.module.css
@@ -20,7 +20,7 @@
 }
 
 .dateInput {
-  @apply w-full font-400 text-3xs md:text-2xs lg:text-xs text-black 
+  @apply w-full font-400 text-3xs md:text-2xs lg:text-xs xl:text-sm text-black 
         placeholder:text-3xs md:placeholder:text-2xs lg:placeholder:text-xs bg-transparent border-none outline-none py-1 pr-1 lg:pr-1.5;
 }
 
