--- a/src/components/FieldSet/styles.module.css
+++ b/src/components/FieldSet/styles.module.css
@@ -49,7 +49,7 @@
 
 .legend {
   @apply text-xs px-0.5 py-0 relative font-700 leading-5 z-[1];
-  @apply lg:text-sm mr-6 lg:mr-8 text-[#3D0C02] h-4;
+  @apply xl:text-xs mr-6 lg:mr-8 text-[#3D0C02] h-4;
   border-radius: 0.25rem;
   padding: 0 0.5rem;
   /* background: white; */
