--- a/src/pages/SpecialistPrintPage/styles.module.css
+++ b/src/pages/SpecialistPrintPage/styles.module.css
@@ -1,7 +1,10 @@
 .form {
-  @apply flex flex-col lg:flex-row gap-4 mt-8 justify-between items-center md:!mx-auto lg:max-w-[480px];
+  @apply flex flex-col md:flex-row gap-4 mt-8 justify-between items-center md:!mx-auto lg:w-[450px] mb-4 lg:mb-6;
 }
 
 .selected-services {
   @apply flex flex-col w-full h-1/3 lg:min-h-[300px] overflow-y-auto;
+}
+.table td {
+  padding: 0px !important;
 }
